# family-contact-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  test.py
.cursor/rules/: package_management.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md
bedrock_translation_agent/libs/: bedrock.py  bedrock_model.py  multi_chunk_translation.py  one_chunk_translation.py  translation.py
canto_nlp/asr/: infer.py
canto_nlp/tests/: conftest.py
canto_nlp/tests/test_asr/: __init__.py  test_infer.py
canto_nlp/tests/test_tts/: __init__.py  test_infer.py
canto_nlp/tests/test_tts/test_text/: __init__.py  test_cantonese_bert.py  test_cleaner.py  test_english_bert_mock.py  test_symbols.py
canto_nlp/tts/: infer.py
canto_nlp/tts/bert/: bert_models.json
canto_nlp/tts/onnx/: BertVits2.2PT.json
canto_nlp/tts/text/: __init__.py  cantonese.py  cantonese_bert.py  cleaner.py  english.py  english_bert_mock.py  jyutping.csv  symbols.py  yue_dict.txt
translation_agent/libs/: config.py  litellm_client.py  litellm_model.py  multi_chunk_translation.py  one_chunk_translation.py  translation.py  utils.py
translation_agent/tests/: __init__.py  conftest.py  test_config.py  test_litellm_client.py  test_litellm_model.py  test_multi_chunk_translation.py  test_one_chunk_translation.py  test_translation.py  test_utils.py
whatsapp_mcp/whatsapp-bridge/: main.go
whatsapp_mcp/whatsapp_mcp_server/: audio.py  cli.py  main.py  whatsapp.py
(+3 files in other folders)
