[project]
name = "family-contact-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cn2an==0.5.22",
    "g2p-en>=2.1.0",
    "gradio>=4.40.0",
    "jieba==0.42.1",
    "pycantonese==3.4.0",
    "sentencepiece>=0.2.0",
    "torch==2.3.1",
    "transformers[onnx]==4.42.4",
    "boto3==1.34.127",
    "tiktoken==0.7.0",
    "icecream==2.1.3",
    "langchain-text-splitters==0.2.1",
    "soundfile>=0.13.1",
    "sounddevice>=0.5.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
include = ["canto_nlp*", "bedrock_translation_agent*", "whatsapp-mcp*"]
